@@ -1,3 +1,10 @@
+2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Presume availability of ‘waitpid’.
+
+	* rcsutil.c (runv) [!defined HAVE_WAITPID]:
+	Delete code and surrounding preprocessor conditional.
+
 2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Fix typo: group ‘getusername’ cond exprs correctly.
